Add some header and some data for now to cover lines in Excel