@@ -5,7 +5,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.util.Base64;
 import java.util.Base64.Encoder;
-import java.util.Collections;
+import java.util.List;
 import no.sikt.nva.data.report.api.fetch.xlsx.Excel;
 import org.apache.jena.query.ResultSet;
 
@@ -17,10 +17,12 @@ public class ExcelFormatter implements ResponseFormatter {
     public String format(ResultSet resultSet) {
         var byteArrayOutputStream = new ByteArrayOutputStream();
         //TODO: Actually use the result set to create the excel
-        var excel = Excel.fromJava(Collections.emptyList(), Collections.emptyList());
+        var excel = Excel.fromJava(List.of("Some header"), List.of(List.of("Some data")));
         try {
             excel.write(byteArrayOutputStream);
         } catch (IOException e) {
+            //TODO: Handle exception
+            //TODO: Test this
             throw new RuntimeException(e);
         }
         var bytes = byteArrayOutputStream.toByteArray();
